backends/drm: don't set backlight brightness to 1 in HDR mode

We haven't actually seen any reports that it's necessary on any screen, and it causes some weird
and broken screens to misbehave.

BUG: 495242